--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "@clerk/clerk-react": "^4.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
